Paramaters in openapi for discovery route
