# docs/swagger.json
@@ -41,6 +41,22 @@
                     "Discovery"
                 ],
                 "summary": "Requests to TNA Discovery API",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "string query",
+                        "name": "keyword",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "string sourceArchives",
+                        "name": "source",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
